# ecmf_essential

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  Readme_efuse.txt  Readme_signature.txt  esp_efuse_custom_table.csv  partitions_two_ota.csv  sdkconfig  sdkconfig.old  signing_key.pem
flash/: efuse_key.txt  flash.py  flash_win10.ps1  instruction.txt  serial_number.txt
main/: CMakeLists.txt  main.c
main/blufi/: blufi.c  blufi_ble.c  blufi_init.c  blufi_ota.c  blufi_security.c  blufi_wifi.c  ota.c
main/driver/ktd2027/: ktd2027.c  ktd2027.h
main/driver/ltr303/: ltr303.c  ltr303.h
main/driver/sgp40/: sgp40.c  sgp40.h
main/driver/sht4x/: sht4x.c  sht4x.h
main/feature/: controller.c  device_controller.c  messaging.c  protocol.c  statistic.c  user_experience.c
main/hardware/: esp_efuse_custom_table.c  fan.c  ir_receiver.c  rgb_led.c  sensor.c  storage.c  system.c  test.c
main/include/: blufi.h  blufi_internal.h  board.h  controller.h  esp_efuse_custom_table.h  fan.h  ir_receiver.h  messaging.h  protocol.h  protocol_internal.h  rgb_led.h  sensor.h  statistic.h  storage.h  storage_internal.h  structs.h  system.h  test.h  types.h  user_experience.h
